2005-08-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* New Edit menu items are now functional, although perhaps buggy.

2005-08-07  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* New Help menu items are now functional.

2005-08-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* Major code clean-up done.
	
	* Lots of modules and functions renamed.

	* paths.py file is no longer written when running from source.
	
	* Changing format in save dialog now changes extension as well.

	* Invert case menu entry removed.
	
	* Shortcut keys for menu entries changed.

	* Several non-functional menu items added to Edit and Help menus.

2005-08-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* Clearing and selecting under Edit menu done.

	* List right-click menu operational.

2005-08-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* Character counts are now displayed in the statusbar.
	  New file: analyzer.py

2005-08-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* "Go To Subtitle" under Search menu done.
	  New files: goto-dialog.glade, searcher.py, goto.py

2005-07-31  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* Format menu done.
	  New files: formatter.py (x2)
	  
	* Fixed sort order interfearing with editing.

	* Miscellanous bug fixes.

2005-07-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* Data is now resorted by show time/frame after manual editing.

2005-07-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* Undo/redo system written.
	  New file: durmanager.py
	  
	* Manual editing is now possible.
	  New files: maneditor.py, editor.py
	  
	* guiupdater.py rewritten.
	
	* Miscellanous bug fixes and minor additions.

2005-07-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* New file: lib/gaupol/gui/constants.py.
	* View menu action states now get updated on document switch.
	* Changed key and section names in config.py.
	
	* Project moved from SourceForge to Gna!.
	* Code, without history, moved to Subversion system.
	
2005-07-21  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* Cell renderers redone. New config setting: "font".
