@@ -25,6 +25,7 @@ try:
 except ImportError:
     pass
 
+import gobject
 import gtk
 
 from gaupol.gui.util import gui
